--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -1,6 +1,6 @@
 ---
 title: "WUP_04"
-author: "Put your name here!"
+author: "Anjolie Barrios"
 date: "fall 2020"
 output:
   html_document:
@@ -11,7 +11,8 @@ output:
 require(knitr)
 require(tidyverse)
 require(tigerstats)
-
+scores <- read_csv(file = "GSScsv.csv")
+scores$DEGREE <- as.factor(scores$DEGREE)
 ```
 
 # Introduction
@@ -25,6 +26,7 @@ $H_a$ There is a significant difference in average score on the WORDSUM test bet
 # Methods
 
 <!--Decide on your methods:  use "variable analysis" or other appropriate descriptors.  Make sure to choose at least one graphical method and at least one numerical method.!-->
+Each person whose data was collected for the dataset "scores" is a "case". We will compare DEGREE, a factor variable describing the highest scholastic degree obtained by a case, with WORDSUM describing the case's score on the WORDSUM test. A boxplot will show the distribution of WORDSUM scores in each category, or factor. A numerical summary will tell us the average, or mean, score as explained by each factor. If differences seem significant enough as tested by a one- way Anova test, Tukey will be used to compare the factors in pairs. 
 
 # Results
 
