--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -44,7 +44,11 @@ Clearly, the scores from LT High School are much lower than the other scores (ex
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 ### Numerical Descriptive Results
-
+```{r}
+favstats(WORDSUM~DEGREE,data=scores)
+```
+  
+Similarly to the boxplot, this summary shows Graduates with the highest average (and highest median) WORDSUM scores, but not by much (Junior College is close). LT HS has the lowest average (and median), as expected.  
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 ## Inferential Results
