--- a/WUP_04.rmd
+++ b/WUP_04.rmd
@@ -52,7 +52,12 @@ Similarly to the boxplot, this summary shows Graduates with the highest average 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
 
 ## Inferential Results
-
+```{r}
+model1 <- aov(WORDSUM~DEGREE,data=scores)
+summary.aov(model1)
+```
+  
+The probability that the all the groups have the same mean is very low: only 0.0236% (taken from the p value, which is incredibly low), so the null hypothesis is rejected. 
 <!--State hypothesis clearly.  Make sure your discussion of the inferential test covers all the aspects that the test output produces, such as test statistic, p-value etc.  Make a decision about the null hypothesis, explain the assumptions on which the selected test/procedure was based, and why the chosen procedure satisfys the assumptions and is appropriate to answer the research question!-->
 
 
